@@ -311,7 +311,7 @@ extern void send_update_within_ten();
 #ifdef NVIDIA_GPUS
 extern int find_file(char *, char *);
 extern int MXMLFromString(mxml_t **, char *, char **, char *);
-extern char  mom_host[]; 
+extern char  mom_host[];
 extern int             MOMNvidiaDriverVersion;
 #endif  /* NVIDIA_GPUS */
 
@@ -1143,7 +1143,7 @@ nvmlDevice_t get_nvml_device_handle(
   nvmlDevice_t      device_hndl;
   char             *ptr;
   unsigned int      index;
-  
+
   /* if gpuid contains a : then try to get the device handle by pci bus id */
 
   ptr = strchr(gpuid, ':');
@@ -1249,7 +1249,7 @@ static char *gpus(
     return (FALSE);
     }
 
-  if (MOMNvidiaDriverVersion == 270)
+  if (MOMNvidiaDriverVersion >= 270)
     {
     sprintf(cmdbuf, "nvidia-smi -q -x 2>&1");
     }
@@ -1436,7 +1436,7 @@ int setgpumode(
   /* get the device handle */
 
   device_hndl = get_nvml_device_handle(gpuid);
-  
+
   if (device_hndl != NULL)
     {
 	  if (LOGLEVEL >= 7)
@@ -1449,7 +1449,7 @@ int setgpumode(
 	    }
 
     rc = nvmlDeviceSetComputeMode(device_hndl, compute_mode);
-    
+
     if (rc == NVML_SUCCESS)
       return (TRUE);
 
@@ -1475,7 +1475,7 @@ int setgpumode(
       gpuid,
       gpumode);
     }
-  else /* 270 driver */
+  else /* 270 or greater driver */
     {
     sprintf(buf, "nvidia-smi -i %s -c %d 2>&1",
       gpuid,
@@ -1500,10 +1500,10 @@ int setgpumode(
           {
           continue;
           }
-        /* for 270 we need to check the return string to see if it went okay */
+        /* for 270 and above we need to check the return string to see if it went okay */
         /* 260 driver does not return anything on success */
 
-        if ((MOMNvidiaDriverVersion == 270) &&
+        if ((MOMNvidiaDriverVersion >= 270) &&
             ((memcmp(buf, "Set compute mode to", 19) == 0) ||
             (memcmp(buf, "Compute mode is already set to", 30) == 0)))
           {
@@ -1560,7 +1560,7 @@ int resetgpuecc(
   nvmlReturn_t      rc;
   nvmlEccBitType_t  counter_type;
   nvmlDevice_t      device_hndl;
-  
+
   if (reset_perm == 1)
     {
     /* reset ecc counts */
@@ -1575,7 +1575,7 @@ int resetgpuecc(
   /* get the device handle */
 
   device_hndl = get_nvml_device_handle(gpuid);
-  
+
   if (device_hndl != NULL)
     {
 	  if (LOGLEVEL >= 7)
@@ -1589,7 +1589,7 @@ int resetgpuecc(
 	    }
 
     rc = nvmlDeviceClearEccErrorCounts(device_hndl, counter_type);
-    
+
     if (rc == NVML_SUCCESS)
       return (TRUE);
 
@@ -1626,7 +1626,7 @@ int resetgpuecc(
       strcat (buf, " -v");
       }
     }
-  else /* 270 driver */
+  else /* 270 or greater driver */
     {
     sprintf(buf, "nvidia-smi -i %s",
       gpuid);
@@ -1668,7 +1668,7 @@ int resetgpuecc(
         /* for 270 we need to check the return string to see if it went okay */
         /* 260 driver does not return anything on success */
 
-        if ((MOMNvidiaDriverVersion == 270) &&
+        if ((MOMNvidiaDriverVersion >= 270) &&
             ((memcmp(buf, "Reset volatile ECC errors to zero", 33) == 0) ||
             (memcmp(buf, "Reset aggregate ECC errors to zero", 34) == 0)))
           {
@@ -1718,7 +1718,7 @@ int resetgpuecc(
  * @return PBSE_NONE if success, error code otherwise
  */
 int setup_gpus_for_job(
-    
+
   job  *pjob) /* I */
 
   {
@@ -1733,9 +1733,9 @@ int setup_gpus_for_job(
 
   /* if node does not have Nvidia recognized driver version then forget it */
 
-  if ((MOMNvidiaDriverVersion != 270) && (MOMNvidiaDriverVersion != 260))
+  if (MOMNvidiaDriverVersion < 260)
     return(PBSE_NONE);
- 
+
   /* if there are no gpus, do nothing */
   if ((pjob->ji_wattr[JOB_ATR_exec_gpus].at_flags & ATR_VFLAG_SET) == 0)
     return(PBSE_NONE);
@@ -1745,10 +1745,10 @@ int setup_gpus_for_job(
     return(PBSE_NONE);
 
   gpu_str = pjob->ji_wattr[JOB_ATR_exec_gpus].at_val.at_str;
-  
+
   if (gpu_str == NULL)
     return(PBSE_NONE);
-  
+
   gpu_flags = pjob->ji_wattr[JOB_ATR_gpu_flags].at_val.at_long;
 
   if (LOGLEVEL >= 7)
@@ -1762,12 +1762,12 @@ int setup_gpus_for_job(
     }
 
   /* traverse the gpu_str to see what gpus we have assigned */
-  
+
   strcpy(tmp_str, mom_host);
   strcat(tmp_str, "-gpu/");
-  
+
   ptr = strstr(gpu_str, tmp_str);
-  
+
   while(ptr != NULL)
     {
     ptr = strchr(ptr, '/');
@@ -1790,7 +1790,7 @@ int setup_gpus_for_job(
 
         resetgpuecc(gpu_id, 0, 1);
         }
-    
+
       gpu_mode = gpu_flags;
       if (gpu_mode  >= 1000)
         {
@@ -1812,7 +1812,7 @@ int setup_gpus_for_job(
 
         setgpumode(gpu_id, gpu_mode);
         }
-    
+
       ptr = strstr(ptr, tmp_str);
       }
     }
@@ -1915,7 +1915,7 @@ void generate_server_gpustatus_nvml(
   outptr += strlen(buffer) + 1;
 
   /* get the driver version to report */
-  
+
   rc = nvmlSystemGetDriverVersion(tmpbuf, 1024);
   if (rc == NVML_SUCCESS)
     {
@@ -2105,7 +2105,7 @@ void generate_server_gpustatus_nvml(
 
     if (rc == NVML_SUCCESS)
       {
-      snprintf(tmpbuf, 50, "gpu_ecc_mode=%s", 
+      snprintf(tmpbuf, 50, "gpu_ecc_mode=%s",
         (ecc_mode == NVML_FEATURE_ENABLED) ? "Enabled" : "Disabled");
       strcat(outptr, tmpbuf);
       outptr += strlen(outptr) + 1;
@@ -2440,7 +2440,7 @@ void generate_server_gpustatus_smi(
         
         } /* end (MOMNvidiaDriverVersion == 260) */
       
-      else if (MOMNvidiaDriverVersion == 270)
+      else if (MOMNvidiaDriverVersion >= 270)
         {
         savptr = dataptr;
         dataptr = strstr(dataptr, "<product_name>");
@@ -2666,7 +2666,7 @@ void generate_server_gpustatus_smi(
           dataptr = savptr;
           }
         
-        } /* end (MOMNvidiaDriverVersion == 270) */
+        } /* end (MOMNvidiaDriverVersion >= 270) */
       
       else
         {
