@@ -3536,6 +3536,10 @@ static int proplist(
       {
       gpu_mode_rqstd = gpu_exclusive_process;
       }
+    else if (have_gpus && (!strcasecmp(pname, "default")))
+      {
+      gpu_mode_rqstd = gpu_normal;
+      }
     else if (have_gpus && (!strcasecmp(pname, "shared")))
       {
       gpu_mode_rqstd = gpu_normal;
